--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -48,7 +48,7 @@
     -->
 
     <permission
-        android:name="it.giacomos.android.osmer.permission.C2D_MESSAGE"
+        android:name="it.giacomos.android.wwwsapp.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
 
     <!--
@@ -58,11 +58,11 @@
                            
                           ========================================
     -->
-    <uses-permission android:name="it.giacomos.android.osmer.permission.C2D_MESSAGE" />
+    <uses-permission android:name="it.giacomos.android.wwwsapp.permission.C2D_MESSAGE" />
 
     <!--
     <permission
-        android:name="it.giacomos.android.osmer.permission.MAPS_RECEIVE"
+        android:name="it.giacomos.android.wwwsapp.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
     -->
 
@@ -74,7 +74,7 @@
         android:glEsVersion="0x00020000"
         android:required="false" />
 
-    <!-- uses-permission android:name="it.giacomos.android.osmer.permission.MAPS_RECEIVE"/ -->
+    <!-- uses-permission android:name="it.giacomos.android.wwwsapp.permission.MAPS_RECEIVE"/ -->
 
 
     <!-- android:label="@string/app_name" before releasing!!! -->
@@ -118,7 +118,7 @@
 
         <!--
               Meteo.FVG package (old and alpha/beta versions) 
-			it.giacomos.android.osmer package name
+			it.giacomos.android.wwwsapp package name
         -->
 
 
@@ -126,11 +126,11 @@
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyBhRcwqzgppnwzQApAHcV7-Rer1JhXiDQs" />
+            android:value="AIzaSyChM0jeUuXoEwQOzL0XVfB1GEKCoTt_lkk" />
         <!-- ========================================== end Meteo.FVG API KEY ============================== -->
 
         <receiver
-            android:name="it.giacomos.android.wwwsapp.service.ConnectivityChangedReceiveriver"
+            android:name="it.giacomos.android.wwwsapp.service.ConnectivityChangedReceiver"
             android:enabled="true"
             android:exported="true"
             android:icon="@drawable/ic_launcher"
@@ -155,32 +155,32 @@
 
         <!--
         activity
-            android:name="it.giacomos.android.osmer.trial.BuyProActivity"
+            android:name="it.giacomos.android.wwwsapp.trial.BuyProActivity"
             android:label="@string/title_activity_buy_pro"
-            android:parentActivityName="it.giacomos.android.osmer.OsmerActivity" >
+            android:parentActivityName="it.giacomos.android.wwwsapp.WWWsAppActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.giacomos.android.osmer.OsmerActivity" />
+                android:value="it.giacomos.android.wwwsapp.WWWsAppActivity" />
         </activity
         -->
 
         <activity
-            android:name="it.giacomos.android.wwwsapp.widgets.map.report.tutorialActivity.TutorialPresentationActivityonActivity"
+            android:name="it.giacomos.android.wwwsapp.widgets.map.report.tutorialActivity.TutorialPresentationActivity"
             android:label="@string/title_activity_tutorial_presentation"
             android:parentActivityName="it.giacomos.android.wwwsapp.WWWsAppActivity"
             android:theme="@style/OtherActivitiesTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.giacomos.android.osmer.OsmerActivity" />
+                android:value="it.giacomos.android.wwwsapp.WWWsAppActivity" />
         </activity>
         <activity
-            android:name="it.giacomos.android.wwwsapp.preferences.SettingsActivitytivity"
+            android:name="it.giacomos.android.wwwsapp.preferences.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:parentActivityName="it.giacomos.android.wwwsapp.WWWsAppActivity"
             android:theme="@android:style/Theme.Holo.Light" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.giacomos.android.osmer.OsmerActivity" />
+                android:value="it.giacomos.android.wwwsapp.WWWsAppActivity" />
         </activity>
 
         <receiver
@@ -189,27 +189,27 @@
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
 
-                <category android:name="it.giacomos.android.osmer" />
+                <category android:name="it.giacomos.android.wwwsapp" />
             </intent-filter>
         </receiver>
 
         <service android:name="it.giacomos.android.wwwsapp.GcmIntentService" />
-        <service android:name="it.giacomos.android.wwwsapp.service.RadarSyncAndRainGridDetectServicedDetectService" />
+        <service android:name="it.giacomos.android.wwwsapp.service.RadarSyncAndRainGridDetectService" />
 
         <activity
             android:name="it.giacomos.android.wwwsapp.RainDetectActivity"
             android:label="@string/title_activity_rain_detect"
-            android:parentActivityName=".OsmerActivity" >
+            android:parentActivityName=".WWWsAppActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".OsmerActivity" />
+                android:value=".WWWsAppActivity" />
         </activity>
         <activity
-            android:name="it.giacomos.android.wwwsapp.personalMessageActivity.PersonalMessageActivityessageActivity"
+            android:name="it.giacomos.android.wwwsapp.personalMessageActivity"
             android:label="@string/title_activity_personal_message" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".OsmerActivity" />
+                android:value=".WWWsAppActivity" />
         </activity>
 
         
