--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -232,7 +232,7 @@
                 android:value="it.giacomos.android.wwwsapp.HelloWorldActivity" />
         </activity>
         <activity
-            android:name=".LayerListActivity"
+            android:name="it.giacomos.android.wwwsapp.layers.LayerListActivity"
             android:label="@string/title_layer_list"
             android:parentActivityName=".HelloWorldActivity"
             android:theme="@android:style/Theme.Holo.Light"  >
@@ -241,9 +241,9 @@
                 android:value="it.giacomos.android.wwwsapp.HelloWorldActivity" />
         </activity>
         <activity
-            android:name=".LayerDetailActivity"
+            android:name="it.giacomos.android.wwwsapp.layers.LayerDetailActivity"
             android:label="@string/title_layer_detail"
-            android:parentActivityName=".LayerListActivity" 
+      it.giacomos.android.wwwsapp.layers.LayerListActivityntActivityName=".LayerListActivity" 
             android:theme="@android:style/Theme.Holo.Light" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
