--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -157,6 +157,9 @@
         
             <service android:name=".layers.installService.LayerInstallService" >
         </service>
+        
+              <service android:name=".layers.LayerListDownloadService" >
+        </service>  
 
         <meta-data
             android:name="com.google.android.gms.version"
